# waifai

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: waifai.rs
src/: client.rs  error.rs  hotspot.rs  lib.rs  log.rs  network.rs  wifi.rs
