[package]
name = "waifai"
version = "0.1.0"
edition = "2021"
authors = ["CosminPerRam [https://github.com/CosminPerRam]"]
license = "MIT"
description = "Interface with Wi-Fi networks."
homepage = "https://github.com/cosminperram/waifai"
documentation = "https://docs.rs/waifai/latest/waifai/"
repository = "https://github.com/cosminperram/waifai"
readme = "README.md"
keywords = ["wifi", "hotspot", "nmcli"]
rust-version = "1.56.1"
categories = ["network-programming"]

[features]

[dependencies]
