[package]
name = "waifai"
version = "0.3.0"
edition = "2021"
authors = ["CosminPerRam [https://github.com/CosminPerRam]", "Inowattio [https://github.com/inowattio]"]
license = "MIT"
description = "Interface with Wi-Fi networks."
homepage = "https://github.com/inowattio"
documentation = "https://docs.rs/waifai/latest/waifai/"
repository = "https://github.com/inowattio/waifai"
readme = "README.md"
keywords = ["wifi", "hotspot", "nmcli"]
rust-version = "1.61.0"
categories = ["network-programming"]

[features]
default = []
serde = ["dep:serde", "serde/derive"]
logging = ["dep:log"]

[dependencies]
serde = { version = "1.0", optional = true }
log = { version = "0.4", optional = true}
